# mech_interp

./: main.py  neuronpedia_api.py  pyproject.toml  test_jailbreaks.py
auto_feature_finder/: feature_finder.py
auto_prompt_creator/: prompt_creator.py
caches/deepseek-r1-distill-llama-8b/15-llamascope-slimpj-res-32k/: diffs.json  feature_activations_cache.json  refusal_cache.json  top_features_cache.json
model_calling/: Gemini.py  LLM.py
