[project]
name = "mech-interp"
version = "0.1.0"
description = ""
authors = [
    {name = "Ella",email = "ella.bettison@xapien.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "google-genai (>=1.26.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
