[project]
name = "mech-interp"
version = "0.1.0"
description = ""
authors = [
    {name = "Ella",email = "ella.bettison@xapien.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "google-genai (>=1.26.0,<2.0.0)",
    "transformers (>=4.53.2,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "transformer-lens (>=2.16.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ruff (>=0.12.4,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
